--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
 <header class="hero" id="top">
 <div class="container content">
 <span class="kicker subheading-big">İstanbul merkezli • Türkiye geneli online danışmanlık</span>
+<!-- QUICK-SLOT-1: hero altı küçük ekler için -->
+<div id="quick-slot-1"></div>
 <h1><span class="accent">Güvenilir Vize Danışmanlığı</span></h1>
 <p>İlk izlenimde güven veren, hızlı ve şeffaf hizmet. Schengen, İngiltere &amp; Amerika başvurularında evrak listesi, randevu, dosya düzeni ve profesyonel metin desteği.</p>
 <div class="cta">
