--- a/index.html
+++ b/index.html
@@ -39,7 +39,15 @@
 <div class="container content">
 <span class="kicker subheading-big">İstanbul merkezli • Türkiye geneli online danışmanlık</span>
 <!-- QUICK-SLOT-1: hero altı küçük ekler için -->
-<div id="quick-slot-1"></div>
+<div id="quick-slot-1">
+  <div class="qbar">
+    <span class="qbadge">Hızlı Menü</span>
+    <a href="#hizmetler" class="qlink">Hizmetler</a>
+    <a href="#ucretler" class="qlink">Ücretler</a>
+    <a href="#sss" class="qlink">SSS</a>
+    <a href="#iletisim" class="qlink">İletişim</a>
+  </div>
+</div>
 <h1><span class="accent">Güvenilir Vize Danışmanlığı</span></h1>
 <p>İlk izlenimde güven veren, hızlı ve şeffaf hizmet. Schengen, İngiltere &amp; Amerika başvurularında evrak listesi, randevu, dosya düzeni ve profesyonel metin desteği.</p>
 <div class="cta">
