--- a/index.html
+++ b/index.html
@@ -220,3 +220,4 @@
 <a aria-label="WhatsApp" class="fab" href="https://wa.me/905457325234">✆</a>
 </body>
 </html>
+<script src="assets/slots.js"></script>
