--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <link href="style.css" rel="stylesheet"/>
 <link href="assets/favicon.ico" rel="icon"/>
 <meta content="assets/og-image.png" property="og:image"/>
+<link rel="canonical" href="https://ufukvize.com/">
 </head>
 <body>
 <nav aria-label="Ana navigasyon" class="nav nav-flags" style="position:sticky;top:0;background:#fff;z-index:999;box-shadow:0 2px 6px rgba(0,0,0,0.08);">
@@ -218,6 +219,6 @@
 </div>
 </footer>
 <a aria-label="WhatsApp" class="fab" href="https://wa.me/905457325234">✆</a>
+<script src="assets/slots.js?v=2" defer></script>
 </body>
 </html>
-<script src="assets/slots.js"></script>
