--- a/index.html
+++ b/index.html
@@ -1,236 +1,110 @@
 <!DOCTYPE html>
-
 <html lang="tr">
 <head>
-<meta charset="utf-8"/>
-<meta content="width=device-width, initial-scale=1" name="viewport"/>
-<title>Ufuk Vize Danışmanlık – Güvenilir Vize Danışmanlığı</title>
-<meta content="Evrak listesi, randevu, niyet mektubu ve finans açıklaması dahil uçtan uca vize danışmanlığı. İlk izlenimde güven veren kurumsal deneyim." name="description"/>
-<link href="style.css" rel="stylesheet"/>
-<link href="assets/favicon.ico" rel="icon"/>
-<meta content="assets/og-image.png" property="og:image"/>
-<link rel="canonical" href="https://ufukvize.com/">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Ufuk Vize Danışmanlık</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<nav aria-label="Ana navigasyon" class="nav nav-flags" style="position:sticky;top:0;background:#fff;z-index:999;box-shadow:0 2px 6px rgba(0,0,0,0.08);">
-<div class="container inner">
-<a class="brand" href="#top">
-<img alt="Ufuk Vize Danışmanlık" class="brand-logo brand-logo" src="assets/logo.png"/>
-<strong class="brand-text brand-text">UFUK VİZE DANIŞMANLIK</strong>
-</a>
-<div class="menu">
-<a class="pill pill-1" href="#hizmetler">Hizmetler</a>
-<a class="pill pill-2" href="#ucretler">Ücretler</a>
-<a class="pill pill-3" href="#sss">SSS</a>
-<a class="pill pill-4" href="#iletisim">İletişim</a>
-<a class="phone-btn pill pill-5" href="tel:+905457325234">✆ Arayın</a></div>
-<a class="wapp-btn modern" href="https://wa.me/905457325234" target="_blank"><span class="wa-ico"><img alt="WhatsApp" class="wa-icon" src="assets/whatsapp.webp"/></span><span class="wa-label"> WhatsApp’tan Yazın</span></a>
-<div class="social-links" style="margin-left:20px;display:flex;gap:10px;align-items:center;"><a aria-label="Instagram" href="https://instagram.com/ufukvizedanismanlik" target="_blank"><img alt="Instagram" class="ig-icon" src="assets/instagram.webp"/></a><a aria-label="LinkedIn" href="https://www.linkedin.com/in/ufuk-vize-078282388" target="_blank">
-<svg height="22" viewbox="0 0 448 512" width="22" xmlns="http://www.w3.org/2000/svg">
-<rect fill="#0A66C2" height="448" rx="20" ry="20" width="448" y="32"></rect>
-<g fill="#fff">
-<rect height="168" width="56" x="88" y="200"></rect>
-<circle cx="116" cy="148" r="28"></circle>
-<path d="M208 200h52v24c10-18 36-28 56-28 64 0 76 40 76 92v80h-56v-76c0-24-2-44-28-44-26 0-36 20-36 44v76h-64V200z"></path>
-</g>
-</svg>
-</a></div></div>
-</nav>
-<header class="hero" id="top">
-<div class="container content">
-<span class="kicker subheading-big">İstanbul merkezli • Türkiye geneli online danışmanlık</span>
-<!-- QUICK-SLOT-1: hero altı küçük ekler için -->
-<div id="quick-slot-1">
-  <div class="qbar">
-    <span class="qbadge">Hızlı Menü</span>
-    <a href="#hizmetler" class="qlink">Hizmetler</a>
-    <a href="#ucretler" class="qlink">Ücretler</a>
-    <a href="#sss" class="qlink">SSS</a>
-    <a href="#iletisim" class="qlink">İletişim</a>
-  </div>
-</div>
-<h1><span class="accent">Güvenilir Vize Danışmanlığı</span></h1>
-<p>İlk izlenimde güven veren, hızlı ve şeffaf hizmet. Schengen, İngiltere &amp; Amerika başvurularında evrak listesi, randevu, dosya düzeni ve profesyonel metin desteği.</p>
-<div class="cta">
-<a class="btn btn-primary" href="https://wa.me/905457325234?text=Merhaba%2C%20vize%20dan%C4%B1%C5%9Fmanl%C4%B1%C4%9F%C4%B1%20hakk%C4%B1nda%20bilgi%20almak%20istiyorum.">WhatsApp’tan Yazın</a>
-<a class="btn btn-ghost btn-alt" href="#form">Ücretsiz Ön Değerlendirme</a><a class="btn-feedback" href="#">Hızlı Geri Bildirim</a>
-</div>
-<div class="badges">
-<span class="badge">✔ Yüzlerce dosya deneyimi</span>
-<span class="badge">✔ Aynı gün evrak kontrolü</span>
-<span class="badge">✔ Şeffaf ücretlendirme</span>
-<span class="badge">✔ Memnuniyet odaklı yaklaşım</span></div>
-</div>
-</header>
-<section class="section" id="hizmetler">
-<div class="container">
 
-<!-- v30: Rally-style Hizmet Kartları -->
-<section aria-label="Hizmetler" class="rally-section">
-<div class="rally-head">
-<h2>Hizmetler</h2>
-<p>Schengen, İngiltere ve Amerika vize başvurularında güvenli ve şeffaf danışmanlık.</p>
-</div>
-<div class="card-grid">
-<article aria-labelledby="svc-schengen" class="card">
-<div aria-hidden="true" class="card-icon">
-<svg height="28" viewbox="0 0 24 24" width="28"><path d="M4 6a2 2 0 0 1 2-2h12l2 2v12a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2V6Z" fill="#e8f0ff"></path><path d="M8 8h8M8 12h8M8 16h5" stroke="#3b71ca" stroke-linecap="round" stroke-width="1.7"></path></svg>
-</div>
-<h3 id="svc-schengen">Schengen Danışmanlığı</h3>
-<p class="card-desc">Evrak listesi, randevu, dosya düzeni ve profesyonel metin desteği.</p>
-<div class="card-cta">
-<a class="btn btn-soft" href="#ucretler">Ücretler</a>
-<a class="btn btn-link" href="#schengen">Detay</a>
-</div>
-</article>
-<article aria-labelledby="svc-uk" class="card">
-<div aria-hidden="true" class="card-icon">
-<svg height="28" viewbox="0 0 24 24" width="28"><circle cx="12" cy="12" fill="#f3ecff" r="10"></circle><path d="M6 9h12M6 15h12M12 4v16" stroke="#7a5af5" stroke-linecap="round" stroke-width="1.7"></path></svg>
-</div>
-<h3 id="svc-uk">İngiltere Vizesi</h3>
-<p class="card-desc">Online form doldurma, randevu, biyometri ve evrak kontrolü.</p>
-<div class="card-cta">
-<a class="btn btn-soft" href="#ucretler">Ücretler</a>
-<a class="btn btn-link" href="#ingiltere">Detay</a>
-</div>
-</article>
-<article aria-labelledby="svc-us" class="card">
-<div aria-hidden="true" class="card-icon">
-<svg height="28" viewbox="0 0 24 24" width="28"><rect fill="#eafaf2" height="14" rx="2" width="18" x="3" y="5"></rect><path d="M6 9h12M6 13h12" stroke="#19a974" stroke-linecap="round" stroke-width="1.7"></path><path d="M9 17h6" stroke="#19a974" stroke-linecap="round" stroke-width="1.7"></path></svg>
-</div>
-<h3 id="svc-us">Amerika Vizesi</h3>
-<p class="card-desc">DS-160 desteği, randevu yönlendirme ve mülakat hazırlığı.</p>
-<div class="card-cta">
-<a class="btn btn-soft" href="#ucretler">Ücretler</a>
-<a class="btn btn-link" href="#amerika">Detay</a>
-</div>
-</article>
-</div>
-</section>
-<h2>Schengen Vizesi Danışmanlığı</h2>
-<p><strong>Danışmanlık Ücreti:</strong> 134,99 € (masraflar hariç)<br/>
-<strong>Masraflar Dahil Paket:</strong> 289,99 €</p>
-<p><em>Not:</em> Ülkeye göre süreç ve masraflar değişebilir. Bazı ülkelerde manuel randevu almak mümkün değildir; yazılım üzerinden randevu alınır ve ücreti başvuru sahibine aittir.</p>
-<h3>Süreç Adımları</h3>
-<ol>
-<li>Başvuru yapılacak ülke belirlenir.</li>
-<li>Randevu takibi yapılır ve tarih kesinleşince bilgilendirme sağlanır.</li>
-<li>Randevuya 1 hafta kala kişiye özel evrak listesi gönderilir.</li>
-<li>Evrak hazırlık süreci takip edilir, danışman soruları yanıtlar.</li>
-<li>Otel &amp; uçak rezervasyonları ile seyahat sağlık sigortası alınır.</li>
-<li>Niyet mektubu ve online başvuru formları hazırlanır.</li>
-<li>Evraklar kontrol edilir, dosya düzeni sağlanır.</li>
-<li>Randevu günü danışman eşlik eder, evrak ve pasaport teslim edilir, biyometri alınır.</li>
-<li>Randevu sonrası danışmanlık ücreti tahsil edilir.</li>
-<li>Vize sonucu beklenir, pasaport teslim alınır.</li>
-</ol>
-<h2>İngiltere Vizesi Danışmanlığı</h2>
-<p><strong>Danışmanlık Ücreti:</strong> 134,99 $ (masraflar hariç)<br/>
-<strong>Konsolosluk Harcı:</strong> 179 $ (6 aylık vize için)</p>
-<h3>Süreç Adımları</h3>
-<ol>
-<li>Online başvuru formu doldurulur.</li>
-<li>179 $ tutarındaki harç ödenir.</li>
-<li>Randevu alınır ve evrak listesi paylaşılır.</li>
-<li>Evraklar taratılarak danışmana iletilir.</li>
-<li>Evraklar online sisteme yüklenir.</li>
-<li>Randevu günü başvuru sahibi yalnızca pasaport ve randevu belgesi ile katılır.</li>
-<li>Randevu sonrası danışmanlık ücreti tahsil edilir.</li>
-<li>Vize sonucu beklenir ve bilgilendirme yapılır.</li>
-</ol>
-<h2>Hizmet Anlayışımız</h2>
-<ul>
-<li><strong>Birebir Takip:</strong> Her başvuru tek bir danışman tarafından baştan sona yönetilir.</li>
-<li><strong>Şeffaf Ücretlendirme:</strong> Tüm ücretler süreç öncesinde açıklanır, sürpriz yoktur.</li>
-<li><strong>Profesyonel Belgeler:</strong> Niyet mektubu, sponsor mektubu, finans açıklamaları ve online formlar uzmanlıkla hazırlanır.</li>
-<li><strong>Destek:</strong> Süreç boyunca her soruya hızlı yanıt, her adımda bilgilendirme.</li>
-<li class="feature-big">✓ Memnuniyet odaklı yaklaşım</li></ul>
-</div>
-</section>
-<section class="section" id="ucretler">
-<div class="container">
-<h2>Ücretler &amp; Masraflar</h2>
-<div class="grid" style="grid-template-columns:repeat(2,minmax(0,1fr));gap:16px">
-<div class="card">
-<h3>Schengen Vizesi</h3>
-<p><strong>Danışmanlık:</strong> 134,99 € (masraflar hariç)<br/>
-<strong>Tüm masraflar dahil:</strong> 289,99 €</p>
-</div>
-<div class="card">
-<h3>İngiltere Vizesi</h3>
-<p><strong>Danışmanlık:</strong> 134,99 $ (masraflar hariç)<br/>
-<strong>Konsolosluk Harcı:</strong> 179 $ (6 aylık)</p>
-</div>
-</div>
-</div>
-</section>
-<section class="section" id="iletisim">
-<div class="container">
-<h2>İletişim</h2>
-<p class="lead">WhatsApp: <a href="https://wa.me/905457325234">+90 545 732 5234</a> ·
-      E‑posta: <a href="mailto:ufukvize3@gmail.com">ufukvize3@gmail.com</a> ·
-      Instagram: <a href="https://instagram.com/ufukvizedanismanlik" target="_blank">@ufukvizedanismanlik</a></p>
-<form class="contact-card" method="POST" name="iletisim" netlify="" netlify-honeypot="bot-field">
-<input name="form-name" type="hidden" value="iletisim"/>
-<p class="hidden"><label>Bot alanı <input name="bot-field"/></label></p>
-<div class="form-grid">
-<div class="form-field">
-<label>Ad Soyad</label>
-<input class="input" name="adsoyad" placeholder="Adınız Soyadınız" required="" type="text"/>
-</div>
-<div class="form-field">
-<label>E‑posta</label>
-<input class="input" name="email" placeholder="ornek@posta.com" required="" type="email"/>
-</div>
-<div class="form-field">
-<label>WhatsApp</label>
-<input class="input" name="whatsapp" placeholder="+90 ..." type="tel"/>
-</div>
-<div class="form-field">
-<label>Hedef Ülke</label>
-<select class="input" name="hedef_ulke">
-<option value="">Seçiniz</option>
-<option>Almanya</option>
-<option>İtalya</option>
-<option>Fransa</option>
-<option>İspanya</option>
-<option>Hollanda</option>
-<option>İngiltere</option>
-<option>Diğer</option>
-</select>
-</div>
-<div class="form-field full">
-<label>Mesaj</label>
-<textarea class="input" name="mesaj" placeholder="Kısa bir not bırakın..." rows="5"></textarea>
-</div>
-</div>
-<div class="actions">
-<button class="btn btn-primary" type="submit">Gönder</button>
-<a class="btn btn-whatsapp" href="https://wa.me/905457325234" target="_blank">WhatsApp’tan Yazın</a>
-</div>
-<p class="micro">Form gönderimleriniz Netlify tarafından güvenli şekilde iletilir.</p>
-</form>
-</div>
-</section>
-<footer class="footer">
-<div class="container">
-<div>© 2025 UFUK VİZE DANIŞMANLIK • İstanbul</div>
-<div style="opacity:.8">Gizlilik • KVKK • Çerez Politikası (yakında)</div>
-</div>
-</footer>
-<a aria-label="WhatsApp" class="fab" href="https://wa.me/905457325234">✆</a>
-<script src="assets/slots.js?v=2" defer></script>
-<script>
-  (function(){
-    const nav = document.querySelector('.nav.nav-flags');
-    if(!nav) return;
-    const onScroll = () => {
-      if(window.scrollY > 8) nav.classList.add('is-scrolled');
-      else nav.classList.remove('is-scrolled');
-    };
-    onScroll(); window.addEventListener('scroll', onScroll, {passive:true});
-  })();
-</script>
+  <!-- Navbar -->
+  <nav class="nav nav-flags">
+    <div class="container">
+      <a href="#" class="logo">UFUK VİZE DANIŞMANLIK</a>
+      <ul class="menu">
+        <li><a href="#schengen">Schengen</a></li>
+        <li><a href="#ingiltere">İngiltere</a></li>
+        <li><a href="#amerika">Amerika</a></li>
+        <li><a href="#ucretler">Ücretler</a></li>
+        <li><a href="#iletisim">İletişim</a></li>
+      </ul>
+    </div>
+  </nav>
+
+  <!-- Hero -->
+  <header class="hero section">
+    <div class="container">
+      <h1>Vize Danışmanlığında Güvenilir Adres</h1>
+      <p>Schengen, İngiltere ve Amerika vize başvurularınızda yanınızdayız.</p>
+      <a href="#iletisim" class="btn btn-primary">Hemen İletişime Geç</a>
+    </div>
+  </header>
+
+  <!-- Hızlı Menü -->
+  <section class="section">
+    <div class="container">
+      <div id="quick-slot-1">
+        <a class="qlink" href="#schengen">Schengen</a>
+        <a class="qlink" href="#ingiltere">İngiltere</a>
+        <a class="qlink" href="#amerika">Amerika</a>
+        <a class="qlink" href="#ucretler">Ücretler</a>
+        <a class="qlink" href="#iletisim">İletişim</a>
+      </div>
+    </div>
+  </section>
+
+  <!-- Hizmetler -->
+  <section id="hizmetler" class="section">
+    <div class="container services-grid">
+
+      <div class="service-card" id="schengen">
+        <h3>Schengen Vizesi</h3>
+        <p>Schengen bölgesi için tüm evrak ve başvuru desteği.</p>
+      </div>
+
+      <div class="service-card" id="ingiltere">
+        <h3>İngiltere Vizesi</h3>
+        <p>İngiltere vize başvurularında eksiksiz danışmanlık.</p>
+      </div>
+
+      <div class="service-card" id="amerika">
+        <h3>Amerika Vizesi</h3>
+        <p>ABD vizesi için profesyonel süreç yönetimi.</p>
+      </div>
+
+    </div>
+  </section>
+
+  <!-- Ücretler -->
+  <section id="ucretler" class="section">
+    <div class="container">
+      <h2>Ücretler</h2>
+      <p>Danışmanlık ücreti 5000 TL olup masraflar dahil değildir.</p>
+    </div>
+  </section>
+
+  <!-- İletişim -->
+  <section id="iletisim" class="section">
+    <div class="container">
+      <h2>İletişim</h2>
+      <p>Telefon: <a href="tel:+905457325234">0545 732 5234</a></p>
+      <p>E-posta: <a href="mailto:ufukvize3@gmail.com">ufukvize3@gmail.com</a></p>
+      <p>Konum: İstanbul</p>
+      <a aria-label="WhatsApp" class="fab" href="https://wa.me/905457325234">WhatsApp</a>
+    </div>
+  </section>
+
+  <!-- Footer -->
+  <footer class="footer">
+    <div class="container">
+      <div>© 2025 UFUK VİZE DANIŞMANLIK • İstanbul</div>
+      <div style="opacity:.8;">Gizlilik • KVKK • Çerez Politikası (yakında)</div>
+    </div>
+  </footer>
+
+  <!-- Scroll Navbar Shadow -->
+  <script>
+    (function(){
+      const nav = document.querySelector('.nav.nav-flags');
+      if(!nav) return;
+      const onScroll = () => {
+        if(window.scrollY > 8) nav.classList.add('is-scrolled');
+        else nav.classList.remove('is-scrolled');
+      };
+      onScroll(); window.addEventListener('scroll', onScroll, {passive:true});
+    })();
+  </script>
 
 </body>
 </html>
