--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1" name="viewport"/>
-<title>Ufuk Vize Danışmanlık – Güvenilir Vize Danışmanlığı</title>
-<meta content="Evrak listesi, randevu, niyet mektubu ve finans açıklaması dahil uçtan uca vize danışmanlığı. İlk izlenimde güven veren kurumsal deneyim." name="description"/>
+<title>Ufuk Vize Danışmanlık – Güvenilir Schengen, İngiltere ve Amerika Vize Danışmanlığı</title>
+<meta name="description" content="Schengen, İngiltere ve Amerika vizesi için güvenilir danışmanlık. İstanbul merkezli ekibimiz, eksiksiz evrak ve güçlü dosyalarla başvurunuzu güçlendirir.">
 <link href="style.css" rel="stylesheet"/>
 <link href="assets/favicon.ico" rel="icon"/>
 <meta content="assets/og-image.png" property="og:image"/>
@@ -67,6 +67,68 @@
 
 <!-- v30: Rally-style Hizmet Kartları -->
 <section aria-label="Hizmetler" class="rally-section">
+<section class="section" id="hizmetler">
+  <div class="container">
+
+    <!-- mevcut hizmetler başlığı burada -->
+    <section aria-label="Hizmetler" class="rally-section">
+      <div class="rally-head">
+        <h2>Hizmetler</h2>
+      </div>
+      <!-- mevcut içerik devam ediyor -->
+    </section>
+
+    <!-- yeni eklenen schengen bölümü -->
+    <section class="service-block" id="schengen">
+      <h2>Schengen Vizesi Danışmanlığı – 2025 Güncel Evrak Listesi</h2>
+      <p>
+        Avrupa seyahati planlayanlar için profesyonel <strong>Schengen vizesi danışmanlığı</strong> sunuyoruz. 
+        Schengen başvurularında en çok red sebebi <em>eksik veya hatalı evraklardır</em>. 
+        Biz sürecin başında size özel evrak listesi oluşturuyor, banka dökümlerinizden seyahat planınıza kadar 
+        her detayı konsolosluk standartlarına uygun hale getiriyoruz.
+      </p>
+      <p>
+        İstanbul’da bulunan ekibimiz, <strong>2025 güncel Schengen vizesi evrak listesi</strong> ile çalışır. 
+        Böylece başvurunuz şansa değil, hazırlığa dayanır.
+      </p>
+      <div class="faq">
+        <h3>Sık Sorulan Sorular</h3>
+        <p><strong>Schengen vizesi kaç günde çıkar?</strong> Ortalama 15 iş gününde sonuçlanır; yoğun dönemlerde bu süre uzayabilir.</p>
+      </div>
+    </section>
+
+  </div>
+  <section class="service-block" id="ingiltere">
+  <h2>İngiltere Vizesi Danışmanlığı – Turist, Öğrenci ve Aile Ziyareti</h2>
+  <p>
+    <strong>İngiltere vizesi</strong> başvuruları, uzun formlar ve detaylı finans sorgulamaları nedeniyle en çok hata yapılan başvurulardandır. 
+    Biz, turist vizesi, öğrenci vizesi ve aile ziyareti vizelerinde dosyanızı <em>İngiltere Konsolosluğu’nun bakış açısıyla</em> hazırlarız.
+  </p>
+  <p>
+    Her evrakı “Bu belgeyi gören konsolosluk görevlisi ne düşünecek?” sorusuna göre düzenliyoruz. 
+    Ayrıca online başvuru formları, randevu planlaması ve <strong>niyet mektubu</strong> yazımında birebir destek veriyoruz.
+  </p>
+  <div class="faq">
+    <h3>Sık Sorulan Sorular</h3>
+    <p><strong>İngiltere vizesinde en çok red sebebi nedir?</strong> Finansal belgelerdeki tutarsızlıklar en sık görülen red nedenidir.</p>
+  </div>
+</section>
+<section class="service-block" id="amerika">
+  <h2>Amerika Vizesi Danışmanlığı – Turist, Öğrenci ve İş Seyahati</h2>
+  <p>
+    <strong>Amerika vizesi</strong> başvuruları, sıkı mülakat süreçleri ve detaylı evrak talepleri ile en çok hazırlık isteyen vizelerdendir.
+    Biz, turist, öğrenci ve iş seyahati vizelerinde dosyanızı <em>Amerikan Konsolosluğu</em> standartlarına uygun şekilde hazırlıyoruz.
+  </p>
+  <p>
+    Başvuru formu, randevu planlaması ve <strong>mülakat hazırlığı</strong> dahil tüm aşamalarda adım adım yanınızdayız.
+  </p>
+  <div class="faq">
+    <h3>Sık Sorulan Sorular</h3>
+    <p><strong>Amerika vizesinde en çok red sebebi nedir?</strong> Eksik ya da tutarsız bilgiler en sık görülen red nedenidir.</p>
+  </div>
+</section>
+
+</section>
 <div class="rally-head">
 <h2>Hizmetler</h2>
 <p>Schengen, İngiltere ve Amerika vize başvurularında güvenli ve şeffaf danışmanlık.</p>
