--- a/index.html
+++ b/index.html
@@ -209,6 +209,94 @@
 <li class="feature-big">✓ Memnuniyet odaklı yaklaşım</li></ul>
 </div>
 </section>
+  <!-- SSS: Sık Sorulan Sorular -->
+<section id="sss" class="section faq-section" aria-label="Sık Sorulan Sorular">
+  <div class="container">
+    <h2>Sık Sorulan Sorular</h2>
+
+    <div class="faq-accordion" id="faq-accordion">
+      <!-- 1 -->
+      <details class="faq-item" id="sss-faq1">
+        <summary>Schengen vizesi kaç günde sonuçlanır?</summary>
+        <div class="faq-a">
+          <p>Ortalama <strong>15 iş günü</strong> sürer; yoğun dönemlerde uzayabilir. İngiltere ve Amerika başvurularında süre randevu tarihi, yoğunluk ve dosyanın niteliğine göre değişir.</p>
+        </div>
+      </details>
+
+      <!-- 2 -->
+      <details class="faq-item" id="sss-faq2">
+        <summary>Pasaportumun geçerliliği ne kadar olmalı?</summary>
+        <div class="faq-a">
+          <p>Genel kural, dönüş tarihinizden sonra en az <strong>3 ay</strong> daha geçerli pasaport ve en az <strong>2 boş sayfa</strong> olmasıdır. Ülkeye göre şartlar değişebilir.</p>
+        </div>
+      </details>
+
+      <!-- 3 -->
+      <details class="faq-item" id="sss-faq3">
+        <summary>Seyahat sağlık sigortası zorunlu mu?</summary>
+        <div class="faq-a">
+          <p>Schengen için evet; <strong>en az 30.000 € teminat</strong>lı poliçe gerekir. Diğer vizelerde de çoğu zaman istenir; kapsam ve süre ülkeye göre değişir.</p>
+        </div>
+      </details>
+
+      <!-- 4 -->
+      <details class="faq-item" id="sss-faq4">
+        <summary>Hesabımda ne kadar bakiye olmalı?</summary>
+        <div class="faq-a">
+          <p>Toplam masrafları karşılayacak düzeyde <strong>düzenli gelir ve yeterli bakiye</strong> beklenir. Sabit bir rakam yok; seyahat süresi ve ülkeye göre yorumlanır.</p>
+        </div>
+      </details>
+
+      <!-- 5 -->
+      <details class="faq-item" id="sss-faq5">
+        <summary>Niyet mektubu nasıl olmalı?</summary>
+        <div class="faq-a">
+          <p>Seyahat amacını, tarihleri, masraf karşılayanı ve geri dönüş bağlarını kısa, net ve tutarlı şekilde anlatmalıdır. Biz, başvuruya özel <strong>profesyonel niyet metni</strong> hazırlarız.</p>
+        </div>
+      </details>
+
+      <!-- 6 -->
+      <details class="faq-item" id="sss-faq6">
+        <summary>Uçak/otel satın almak şart mı?</summary>
+        <div class="faq-a">
+          <p>Genellikle <strong>rezervasyon</strong> yeterlidir; satın alma zorunlu değildir. Dosyanızı gereksiz maliyete sokmadan doğru rezervasyon akışıyla hazırlarız.</p>
+        </div>
+      </details>
+
+      <!-- 7 -->
+      <details class="faq-item" id="sss-faq7">
+        <summary>Randevu bulamıyorum, ne yapmalıyım?</summary>
+        <div class="faq-a">
+          <p>Farklı merkezleri kontrol eder, uygun slotları takip ederiz. Bazı ülkelerde iptal slotları hızla açılıp kapanır; biz süreç boyunca <strong>aktif randevu takibi</strong> yaparız.</p>
+        </div>
+      </details>
+
+      <!-- 8 -->
+      <details class="faq-item" id="sss-faq8">
+        <summary>Red aldım; itiraz mı, yeniden başvuru mu?</summary>
+        <div class="faq-a">
+          <p>Sebebe göre değişir. Belgeleri güçlendirerek <strong>yeniden başvuru</strong> genelde daha hızlı çözümdür; itiraz (appeal) bazı ülkelerde mümkündür ve daha uzun sürebilir.</p>
+        </div>
+      </details>
+
+      <!-- 9 -->
+      <details class="faq-item" id="sss-faq9">
+        <summary>Vize sürem kadar kalabilir miyim?</summary>
+        <div class="faq-a">
+          <p>Vizedeki <strong>sayfa içi kodlar</strong> (C/D, giriş sayısı, “duration of stay”) ve sınır görevlisinin kararına bağlıdır. Vize geçerlilik süresi ile <em>kalış süresi</em> farklı kavramlardır.</p>
+        </div>
+      </details>
+
+      <!-- 10 -->
+      <details class="faq-item" id="sss-faq10">
+        <summary>Danışmanlık hizmetiniz neleri kapsar?</summary>
+        <div class="faq-a">
+          <p>Evrak listesi ve kontrolü, rezervasyon planı, <strong>niyet metni</strong>, randevu planlama ve başvuru formu akışı. Ücret, ülke/tür ve işin kapsamına göre değişir.</p>
+        </div>
+      </details>
+    </div>
+  </div>
+</section>
 <section class="section" id="ucretler">
 <div class="container">
 <h2>Ücretler &amp; Masraflar</h2>
