--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
 <title>Ufuk Vize Danışmanlık – Güvenilir Schengen, İngiltere ve Amerika Vize Danışmanlığı</title>
 <meta name="description" content="Schengen, İngiltere ve Amerika vizesi için güvenilir danışmanlık. İstanbul merkezli ekibimiz, eksiksiz evrak ve güçlü dosyalarla başvurunuzu güçlendirir.">
 <link href="style.css" rel="stylesheet"/>
-<link href="assets/favicon.ico" rel="icon"/>
+<!-- Favicons -->
+<link rel="icon" href="assets/favicon.ico?v=4" sizes="any">
+<link rel="icon" type="image/png" sizes="32x32" href="assets/favicon-32.png?v=4">
+<link rel="icon" type="image/png" sizes="16x16" href="assets/favicon-16.png?v=4">
+<link rel="apple-touch-icon" sizes="180x180" href="assets/apple-touch-icon.png?v=4">
+<link rel="icon" type="image/png" sizes="192x192" href="assets/favicon-192.png?v=4">
 <meta content="assets/og-image.png" property="og:image"/>
 <link rel="canonical" href="https://ufukvize.com/">
 </head>
