--- a/index.html
+++ b/index.html
@@ -374,7 +374,13 @@
 <div style="opacity:.8">Gizlilik • KVKK • Çerez Politikası (yakında)</div>
 </div>
 </footer>
-<a aria-label="WhatsApp" class="fab" href="https://wa.me/905457325234">✆</a>
+<a aria-label="Ara" class="fab fab-call" href="tel:+905457325234">
+  <!-- Basit telefon simgesi (inline SVG) -->
+  <svg class="fab-icon" viewBox="0 0 24 24" width="28" height="28" aria-hidden="true">
+    <path fill="currentColor" d="M6.62 10.79a15.05 15.05 0 006.59 6.59l2.2-2.2a1 1 0 011.02-.24 11.36 11.36 0 003.56.57 1 1 0 011 1v3.64a1 1 0 01-1 1A17 17 0 013 5a1 1 0 011-1h3.64a1 1 0 011 1c0 1.2.2 2.41.57 3.56a1 1 0 01-.24 1.02l-2.35 2.21z"/>
+  </svg>
+</a>
+
 <script src="assets/slots.js?v=2" defer></script>
 <script>
   (function(){
