--- a/index.html
+++ b/index.html
@@ -396,7 +396,12 @@
 <!-- Bayrak kısayolları -->
 <div class="flag-fab" aria-label="Bayrak menüsü">
   <button class="flag-fab__btn" id="flagFabBtn" aria-expanded="false" aria-haspopup="true" aria-controls="flagFabMenu">
-    <img src="assets/eu_flag_64.png" alt="Bayrak menüsü" />
+<svg viewBox="0 0 24 24" width="28" height="28" aria-hidden="true">
+    <path fill="currentColor"
+      d="M12 2a10 10 0 100 20 10 10 0 000-20zm8 10a8 8 0 01-2.1 5.4c-.3-.9-1.2-1.8-2.4-2.3-.7-.3-1.4-.6-1.9-1-.5-.4-.7-.8-.6-1.2.1-.6.8-1 1.7-1.3.9-.3 1.7-.5 2.4-1 .7-.5 1.1-1.1 1.3-1.8A8 8 0 0120 12zM4 12a8 8 0 014.3-7.1c.1.9.5 1.7 1.1 2.4.6.6 1.3 1 2.2 1.3.8.3 1.4.5 1.6.9.2.4.1.8-.3 1.2-.4.3-1 .6-1.8.9-1 .3-1.9.7-2.5 1.2-.6.6-.9 1.2-.8 1.9.1.6.5 1.2 1.2 1.7.6.5 1.5.9 2.6 1.2.5.2 1 .4 1.5.7A8 8 0 014 12z"/>
+  </svg>
+</button>
+
   </button>
 
   <nav class="flag-fab__menu" id="flagFabMenu" aria-hidden="true">
